# AI-Contract-Intelligence-and-Risk-Scoring--NLP-

./: .gitignore  BRANCHING_STRATEGY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  Dockerfile  PROJECT_SETUP.md  README.md  docker-compose.yml  github-issues-backlog.md  pyproject.toml  test_day1.py  test_day2.py  test_day3_cuad_parser.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-dataset-parsing.md  02-ocr-pipeline.md  03-ner-extraction.md  04-clause-classification.md  05-risk-scoring.md  06-vector-search.md  07-fastapi-backend.md  08-celery-integration.md  09-dockerization.md  10-testing-documentation.md  bug_report.md  feature_request.md
.github/workflows/: build-validation.yml  ci.yml  codeql.yml
docs/: DATASET_VERSIONING.md
src/: __init__.py  ocr_test.py
src/api/: main.py
src/clause_classifier/: service.py
src/ingestion/: cleaner.py  cuad_loader.py  download_cuad.py  extract_text.py  file_processor.py  schema.py  service.py  validator.py
src/ner/: service.py  tokenize_text.py
src/ocr/: service.py
src/risk_scoring/: service.py
src/tasks/: celery_app.py  worker.py
src/utils/: config.py  preprocess_text.py  save_json.py
src/vector_store/: service.py
tests/: test_api.py
