[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-contract-intelligence"
version = "0.1.0"
description = "AI-Powered Contract Intelligence & Risk Scoring System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "celery>=5.4.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "spacy>=3.7.0",
  "langchain>=0.2.0",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
